--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Redirect Page</title>
+  <meta name="robots" content="noindex">
+  <link rel="canonical" href="/en"/>
+  <link rel="alternate" lang="ru" href="/ru" />
+  <meta name="robots" content="noindex">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+  <title>Eugeny Mazurov | Frontend developer</title>
   <script>
     const userLanguages = navigator.languages || [navigator.language];
     if (userLanguages.some(lang => lang.includes('ru'))) {
